<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.telnyx.webrtc.xmlapp.org.telnyx.webrtc.xml_app.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        >


        <RelativeLayout
            android:id="@+id/profileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubText"
                android:text="@string/profile"/>

            <TextView
                android:id="@+id/profileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SubTextDeep"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_below="@+id/profileLabel"
                android:text="@string/no_profile_selected"/>

            <Button
                android:id="@+id/switchProfile"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_toEndOf="@+id/profileId"
                android:text="@string/switch_profile"
                android:layout_below="@+id/profileLabel"
                android:textAllCaps="false"
                android:padding="1dp"
                style="@style/CustomOutlinedButton"
                />


        </RelativeLayout>

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:padding="1dp"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintTop_toBottomOf="@+id/profileInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomPrimaryButton"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
